--- a/03.id属性とclass属性/index.html
+++ b/03.id属性とclass属性/index.html
@@ -8,19 +8,19 @@
 <body>
   <h1>CSSハンズオン</h1>
   <h3>Part3</h3>
-  <p>背景色は青色、文字色は白色ですよ</p>
-  <p>背景色は青色、文字色は白色ですよ</p>
-  <p>背景色は青色、文字色は白色ですよ</p>
-  <p>背景色は青色、文字色は黄色ですよ</p>
-  <p>背景色は青色、文字色は赤色ですよ</p>
-  <p>背景色は青色、文字色は黄色ですよ</p>
+  <p class="white">背景色は青色、文字色は白色ですよ</p>
+  <p class="white">背景色は青色、文字色は白色ですよ</p>
+  <p class="white">背景色は青色、文字色は白色ですよ</p>
+  <p class="yellow">背景色は青色、文字色は黄色ですよ</p>
+  <p class="red">背景色は青色、文字色は赤色ですよ</p>
+  <p class="yellow">背景色は青色、文字色は黄色ですよ</p>
   <ul>
-    <li>文字色は黄色、背景色は灰色、文字サイズは16px</li>
-    <li>文字色は青色、背景色は灰色、文字サイズは16px</li>
-    <li>文字色は赤色、背景色は緑色、文字サイズは16px</li>
-    <li>文字色は青色、背景色は緑色、文字サイズは16px</li>
-    <li>文字色は黄色、背景色は茶色、文字サイズは16px</li>
-    <li>文字色は赤色、背景色は茶色、文字サイズは12px</li>
+    <li class="yellow back-gray size">文字色は黄色、背景色は灰色、文字サイズは16px</li>
+    <li class="blue back-gray size">文字色は青色、背景色は灰色、文字サイズは16px</li>
+    <li class="red back-green size">文字色は赤色、背景色は緑色、文字サイズは16px</li>
+    <li class="blue back-green size">文字色は青色、背景色は緑色、文字サイズは16px</li>
+    <li class="yellow back-brown size">文字色は黄色、背景色は茶色、文字サイズは16px</li>
+    <li class="red back-brown" id="size">文字色は赤色、背景色は茶色、文字サイズは12px</li>
   </ul>
 </body>
 </html>
