Part4 セレクターを深ぼってみよう

--- a/04.セレクターを深ぼってみよう/index.html
+++ b/04.セレクターを深ぼってみよう/index.html
@@ -30,3 +30,39 @@
   </main>
 </body>
 </html>
+
+
+
+
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="styles.css" />
+  <title>Document</title>
+</head>
+<body>
+  <div class="header">
+    <h1 class="title">CSSハンズオン</h1>
+  </div>
+  <main>
+    <div class="content">
+      <article>
+        <h2>Part1</h2>
+        <P>CSSの基本を知ろう</P>
+      </article>
+      <article>
+        <h2>Part2</h2>
+        <p>色やサイズを変更してみよう</p>
+      </article>
+    </div>
+    <div class="side">
+      <h3>Part1 CSSの基本を知ろう</h3>
+      <p>CSSとは？</p>
+      <p>CSSの書き方</p>
+      <p>HTMLにCSSを適用する</p>
+      <p>CSSを書いてみよう</p>
+    </div>
+  </main>
+</body>
+</html>
