Part5 要素の並びやサイズを設定しよう

--- a/05.要素の並びやサイズを設定しよう/index.html
+++ b/05.要素の並びやサイズを設定しよう/index.html
@@ -8,10 +8,28 @@
 <body>
   <h1>CSSハンズオン</h1>
   <h3>Part5</h3>
-  <p class="today">今日の天気</p>
+  <p class="today">今日の<span>天気</span></p>
   <p class="weather">晴れ</p>
   <p class="temperature">32℃</p>
   <p class="humidity">58%</p>
   <img src="images/weather.png" alt="sunny" />
 </body>
+</html>
+
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="utf-8" />
+  <lind rel="sytlesheet" href="style.css" />
+  <title>Document</title>
+</head>
+<body>
+  <h1>CSSハンズオン</h1>
+  <h3>Part5</h3>
+  <p class="today">今日の天気</p>
+  <p class="weather">晴れ"</p>
+  <p class="temperature">32℃</p>
+  <p class="humidity">58%</p>
+  <img src="images/weather.png" alt="sunny" />
+</body
 </html>
