Part7 余白を学ぼう

--- a/07.余白を学ぼう/index.html
+++ b/07.余白を学ぼう/index.html
@@ -15,3 +15,21 @@
   <p>ハッカソン</p>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="styles.css" />
+  <title>Document</title>
+</head>
+<body>
+  <h1>CSSハンズオン</h1>
+  <h3>Part7</h3>
+  <p>ダッシュボード</p>
+  <p>講義動画</p>
+  <p>講義日程</p>
+  <p>ステップ一覧</p>
+  <p>ハッカソン</p>
+</body>
+</html>
