Par12 フレックスボックス

--- a/12.フレックスボックス/index.html
+++ b/12.フレックスボックス/index.html
@@ -15,16 +15,16 @@
     </ul>
   </header>
   <main>
-    <div>div1</div>
-    <div>div2</div>
-    <div>div3</div>
-    <div>div4</div>
-    <div>div5</div>
-    <div>div6</div>
-    <div>div7</div>
-    <div>div8</div>
-    <div>div9</div>
-    <div>div10</div>
+    <div class="st">div1</div>
+    <div class="st">div2</div>
+    <div class="st">div3</div>
+    <div class="st">div4</div>
+    <div class="st">div5</div>
+    <div class="st">div6</div>
+    <div class="st">div7</div>
+    <div class="st">div8</div>
+    <div class="st">div9</div>
+    <div class="st">div10</div>
   </main>
   <footer>
     <p>RareTECH</p>
